# aether_os

./: .gitignore  CMakeLists.txt  LICENSE  README.md  run_qemu.sh
cmake/: toolchain-aarch64.cmake
docs/: AetherScript-Lua_Porting_plan.md  New_Files_App.md  app_development_guide.md  compositing_wm_plan.md  development_plan.md  technical_specifications.md  web_browser_development.md
kernel/: CMakeLists.txt
kernel/arch/arm64/: context_switch.S  exceptions.S
kernel/arch/arm64/boot/: boot.S  linker.ld
kernel/core/: exceptions.c  main.c  pipe.c  printk.c  process.c  scheduler.c  syscall.c  wm.c
kernel/drivers/block/: virtio_blk.c
kernel/drivers/char/: uart_pl011.c
kernel/drivers/gpu/: mailbox.c  v3d.c
kernel/drivers/input/: keycodes.h  pl050_kbd.c  pl050_kbd.h  pl050_mouse.c  pl050_mouse.h  virtio_input.c
kernel/drivers/irq/: gic_v2.c
kernel/drivers/net/: virtio_net.c
kernel/drivers/pci/: pci_ecam.c
kernel/drivers/power/: boot_prof.c  cpufreq.c  dpms.c  thermal.c
kernel/drivers/rtc/: pl031.c
kernel/drivers/timer/: arm_timer.c
kernel/drivers/usb/: ohci.c
kernel/drivers/video/: cursor.c  cursor.h  fb.c  fb_console.c  font.c  fw_cfg.c  ramfb.c
kernel/fs/: aetherfs.c  elf.c  fat32.c  initrd.c  vfs.c
kernel/include/aether/: aetherfs.h  dhcp.h  dns.h  elf.h  ethernet.h  exceptions.h  fat32.h  initrd.h  ip.h  kmalloc.h  mm.h  net.h  pipe.h  printk.h  process.h  scheduler.h  socket.h  syscall.h  tcp.h  types.h  udp.h  vfs.h  vmm.h  wm.h
kernel/include/drivers/block/: virtio_blk.h
kernel/include/drivers/char/: uart_pl011.h
kernel/include/drivers/gpu/: mailbox.h  v3d.h
kernel/include/drivers/input/: pl050_kbd.h  pl050_mouse.h  virtio_input.h
kernel/include/drivers/irq/: gic_v2.h
kernel/include/drivers/net/: virtio_net.h
kernel/include/drivers/pci/: pci_ecam.h
kernel/include/drivers/power/: boot_prof.h  cpufreq.h  dpms.h  thermal.h
kernel/include/drivers/rtc/: pl031.h
kernel/include/drivers/timer/: arm_timer.h
kernel/include/drivers/usb/: ohci.h
kernel/include/drivers/video/: cursor.h  fb.h  fb_console.h  font.h  fw_cfg.h  ramfb.h
kernel/mm/: kmalloc.c  pmm.c  vmm.c
kernel/net/: dhcp.c  dns.c  ethernet.c  ip.c  net.c  socket.c  tcp.c  udp.c
kernel/user/: init_task.S
scripts/: fetch_fonts.sh  fetch_freetype.sh  fetch_libjpeg.sh  fetch_libpng.sh  fetch_lua.sh  fetch_netsurf.sh  fetch_netsurf_libs.sh  fetch_quickjs.sh  fetch_zlib.sh  gen_test_images.py  make_afs.sh  make_disk.sh  make_initrd.sh  run_qemu.sh
tests/browser/: index.html
userspace/: CMakeLists.txt
userspace/apps/aether_browser/: main.c
userspace/apps/aether_editor/: main.c
userspace/apps/aether_http/: main.c
userspace/apps/aether_interp/: main.c
userspace/apps/aether_term/: main.c
userspace/apps/aether_top/: main.c
userspace/apps/browser_test/: main.c
userspace/apps/calculator/: main.c
userspace/apps/compositor/: main.c
userspace/apps/desktop/: main.c
userspace/apps/dock/: main.c
userspace/apps/fetch_test/: main.c
userspace/apps/files/: main.c
userspace/apps/font_test/: main.c
userspace/apps/html_test/: main.c
userspace/apps/img_test/: main.c
userspace/apps/init/: main.c
userspace/apps/js_test/: main.c
userspace/apps/ns_test/: main.c
userspace/apps/posix_test/: main.c
userspace/apps/statusbar/: main.c
userspace/apps/telnet/: main.c
userspace/apps/textviewer/: main.c
userspace/apps/tictactoe/: main.c
userspace/apps/topbar/: main.c
userspace/apps/widget_demo/: main.c
userspace/initrd_files/: motd.txt
userspace/initrd_files/apps/: aether_browser.app  aether_top.app  compositor.app  fetch_test.app  font_test.app  html_test.app  img_test.app  js_test.app  ns_test.app  posix_test.app  telnet.app  tictactoe.app
userspace/lib/: crt0.S  user.ld
userspace/lib/aether_font/: aether_font.c  aether_font.h
userspace/lib/include/: assert.h  ctype.h  float.h  gfx.h  gpu.h  icon_cache.h  input.h  limits.h  manifest.h  math.h  setjmp.h  stdarg.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  sys.h  vfs_mounts.h  widget.h
userspace/lib/libaether/: gfx.c  gpu.c  icon_cache.c  manifest.c  math.c  setjmp.S  stdio.c  stdlib.c  string.c  vfs_mounts.c
userspace/lib/libwidget/: anim.c  button.c  checkbox.c  label.c  listview.c  panel.c  progress.c  scrollbar.c  textarea.c  textinput.c  treeview.c  widget.c
userspace/lib/netsurf_aether/: bitmap_aether.h  fetch_file_aether.c  fetch_http_aether.c  fetch_http_stub.c  gui_bitmap_aether.c  gui_fetch_aether.c  gui_layout_aether.c  gui_misc_aether.c  gui_window_stub.c  js_aether.c  netsurf_aether.h  nslog_aether.c  nslog_filter_stub.c  options.h  plot_aether.c  plot_aether.h
